Fixed z-indexes for multiple components
Mobile safari has some issues with z-index: -1. Not sure why though.
This removed all the hidden elements with a z-index: -1 and just allow
the z-index to be auto.

Closes #442

--- a/src/scss/components/_selection-controls.scss
+++ b/src/scss/components/_selection-controls.scss
@@ -89,7 +89,6 @@ $md-switch-ball-fallback-color: null !default;
     position: absolute;
     visibility: hidden;
     width: 0;
-    z-index: -1;
   }
 
   .md-selection-control-label {
