--- a/src/scss/components/_text-fields.scss
+++ b/src/scss/components/_text-fields.scss
@@ -676,7 +676,6 @@ $md-text-field-line-height: 1.15 !default;
       overflow: hidden;
       position: absolute;
       visibility: hidden;
-      z-index: -1;
     }
   }
 }
